--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- NAVBAR-->
   <!--===============================================================-->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -35,8 +35,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" data-scroll href="#home">
-            <!-- <img src="assets/images/logo.png" alt="logo"> -->
+            <img src="assets/images/logo.png" alt="logo">
             <i class="fa fa-circle-o-notch fa-lg"></i> Green Ham Solutions
+            <br><small class="muted pull-left">Custom Web Development & Consulting</small>
           </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -44,12 +45,11 @@
             <li><a data-scroll href="#portfolio">Portfolio</a></li>
             <li><a data-scroll href="#skills">Skills</a></li>
             <li><a data-scroll href="#services">Services</a></li>
-            <li><a data-scroll href="blog.html">Blog</a></li>
             <li><a data-scroll href="#contact"><span class="contact">Contact</span></a></li>
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- INTRO-->
     <!--===============================================================-->
@@ -58,17 +58,24 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
-              <h1 class="text-center">HEY !<br>I'm Chris Ham.<br>A Web Developer.</h1>
+              <h1 class="text-center">
+                HEY !<br>I'm Chris Ham.<br>A web developer.<br>
+                <div class="logos">
+                  <a href="http://lnkd.in/svu8Eg" target="_blank"><i class="fa fa-linkedin fa-border fa-2x"></i></a>
+                  <a href="https://github.com/greenham" target="_blank"><i class="fa fa-github fa-border fa-2x"></i></a>
+                  <a href="mailto:chris@greenhamsolutions.com"><i class="fa fa-envelope fa-border fa-2x"></i></a>
+                </div>
+              </h1>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="arrow-down"></div>
+    <!-- <div class="arrow-down"></div> -->
 
     <!-- PORTFOLIO-->
     <!--===============================================================-->
-    <div class="bg-portfolio" id="portfolio">
+    <!-- <div class="bg-portfolio" id="portfolio">
       <div class="container">
 
         <div class="row">
@@ -100,11 +107,11 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <!-- SKILLS-->
     <!--===============================================================-->
-    <div class="bg-skills" id="skills">
+    <!-- <div class="bg-skills" id="skills">
       <div class="container">
 
         <div class="row">
@@ -143,11 +150,11 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <!-- SERVICES-->
     <!--===============================================================-->
-    <div class="bg-services" id="services">
+    <!-- <div class="bg-services" id="services">
       <div class="container">
 
         <div class="row">
@@ -236,25 +243,25 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- CONTACT-->
     <!--===============================================================-->
-    <div class="bg-contact" id="contact">
+    <!-- <div class="bg-contact" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
             <h3>Feel free to contact me for your next project</h3>
-              <!-- YOUR E-MAIL-->
+              YOUR E-MAIL
             <a href="mailto:example@example.com" class="mail"><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- FOOTER-->
     <!--===============================================================-->
-    <div class="bg-footer">
+    <!-- <div class="bg-footer">
       <div class="container">
         <div class="row text-center">
           <div class="col-sm-12">
@@ -265,7 +272,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- FOOTER-BOTTOM-->
     <!--===============================================================-->
@@ -273,15 +280,15 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p class="copyright">2014 &copy; Mamoot Studio - All Rights Reserved</p>
+            <p class="copyright">2014 &copy; Green Ham Solutions LLC - All Rights Reserved</p>
           </div>
           <div class="col-sm-6">
-            <ul class="list-inline pull-right">
+            <!-- <ul class="list-inline pull-right">
               <li class="border-right"><a href="#home" data-scroll>Top</a></li>
               <li class="border-right"><a href="#portfolio" data-scroll>Portfolio</a></li>
               <li class="border-right"><a href="#skills" data-scroll>Skills</a></li>
               <li><a href="#services" data-scroll>Services</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -295,5 +302,15 @@
     <script src="assets/js/smooth-scroll.js"></script>
     <script src="assets/js/jRespond.min.js"></script>
     <script src="assets/js/script.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-3755181-4', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
