start adding portfolio items

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Green Ham Solutions LLC">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
-    <title>Custom Web Development and Consulting | Green Ham Solutions</title>
+    <title>Web Development and Consulting | Green Ham Solutions</title>
     <!-- CSS -->
     <!--===============================================================-->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 
   <!-- NAVBAR-->
   <!--===============================================================-->
-    <!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -35,7 +35,6 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" data-scroll href="#home">
-            <img src="assets/images/logo.png" alt="logo">
             <i class="fa fa-circle-o-notch fa-lg"></i> Green Ham Solutions
             <br><small class="muted pull-left">Custom Web Development & Consulting</small>
           </a>
@@ -49,7 +48,7 @@
           </ul>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- INTRO-->
     <!--===============================================================-->
@@ -71,11 +70,11 @@
         </div>
       </div>
     </div>
-    <!-- <div class="arrow-down"></div> -->
+    <div class="arrow-down"></div>
 
     <!-- PORTFOLIO-->
     <!--===============================================================-->
-    <!-- <div class="bg-portfolio" id="portfolio">
+    <div class="bg-portfolio" id="portfolio">
       <div class="container">
 
         <div class="row">
@@ -87,15 +86,15 @@
 
         <div class="row row-portfolio">
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="lightbox wrapper-portfolio" href="assets/images/640x480.gif">
-                <img class="img-responsive" src="assets/images/320x340.gif" alt="portfolio-1">
-                <h3 class="category">Web Design</h3>
+              <a class="lightbox wrapper-portfolio" href="assets/images/fru-mobile-form-lg.png">
+                <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
+                <h3 class="category">Mobile Optimization</h3>
               </a>
           </div>
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="lightbox wrapper-portfolio" href="assets/images/640x480.gif">
-                <img class="img-responsive" src="assets/images/320x340.gif" alt="portfolio-2">
-                <h3 class="category">Logo Design</h3>
+              <a class="lightbox wrapper-portfolio" href="assets/images/volum-io-lg.png">
+                <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
+                <h3 class="category">Web Applications</h3>
               </a>
           </div>
           <div class="col-sm-4">
@@ -107,7 +106,7 @@
         </div>
 
       </div>
-    </div> -->
+    </div>
 
     <!-- SKILLS-->
     <!--===============================================================-->
