more portfolio, flesh out skills

--- a/index.html
+++ b/index.html
@@ -88,20 +88,23 @@
           <div class="col-sm-4 margin-bottom-xs">
               <a class="lightbox wrapper-portfolio" href="assets/images/fru-mobile-form-lg.png">
                 <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
-                <h3 class="category">Mobile Optimization</h3>
+                <h3 class="category">FreeRateUpdate.com</h3>
               </a>
+              <p align="center">Mobile Optimization</p>
           </div>
           <div class="col-sm-4 margin-bottom-xs">
               <a class="lightbox wrapper-portfolio" href="assets/images/volum-io-lg.png">
                 <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
-                <h3 class="category">Web Applications</h3>
+                <h3 class="category">volum.io</h3>
               </a>
+              <p align="center">Web Application</p>
           </div>
           <div class="col-sm-4">
-              <a class="lightbox wrapper-portfolio" href="assets/images/640x480.gif">
-                <img class="img-responsive" src="assets/images/320x340.gif" alt="portfolio-3">
-                <h3 class="category">Development</h3>
+              <a class="lightbox wrapper-portfolio" href="assets/images/top-rt-streamer-lg.png">
+                <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="portfolio-3">
+                <h3 class="category">Top ReTweets</h3>
               </a>
+              <p align="center">API Development</p>
           </div>
         </div>
 
@@ -110,38 +113,38 @@
 
     <!-- SKILLS-->
     <!--===============================================================-->
-    <!-- <div class="bg-skills" id="skills">
+    <div class="bg-skills" id="skills">
       <div class="container">
 
         <div class="row">
           <div class="col-sm-6 margin-bottom-xs">
             <h2>MY SKILLS</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt. <br>Quisque luctus aliquam dolor et consectetur. Nullam viverra diam sed dignissim congue. Aenean eget mauris quis eros convallis ornare. Fusce sed erat purus. Nam egestas venenatis elit eget cursus.
+              I am a reliable and resourceful full-stack web developer with over 10 years of experience designing and programming elegant software solutions for unique industries across the web. Running a successful web development and consulting business for over a decade has taught me the value of smart, organized work, given me invaluable insight into the industry, and instilled a great sense of pride in what I do. I'm never satisfied with mediocrity and I continually fight complacency through self-education and seeking new opportunities.
             </p>
           </div>
           <div class="col-sm-6">
-            <h4>Adobe Illustrator</h4>
+            <h4>LAMP Stack</h4>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
                 <span class="sr-only"></span>
               </div>
             </div>
-            <h4>Photoshop</h4>
+            <h4>JavaScript</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+            <h4>HTML5/CSS3/jQuery</h4>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                 <span class="sr-only"></span>
               </div>
             </div>
-            <h4>HTML5 - CSS3</h4>
+            <h4>MEAN Stack</h4>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                <span class="sr-only"></span>
-              </div>
-            </div>
-            <h4>Javascript</h4>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+              <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
                 <span class="sr-only"></span>
               </div>
             </div>
@@ -149,7 +152,7 @@
         </div>
 
       </div>
-    </div> -->
+    </div>
 
     <!-- SERVICES-->
     <!--===============================================================-->
