--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a data-scroll href="#portfolio">Portfolio</a></li>
             <li><a data-scroll href="#skills">Skills</a></li>
-            <li><a data-scroll href="#services">Services</a></li>
+            <!-- <li><a data-scroll href="#services">Services</a></li> -->
             <li><a data-scroll href="#contact"><span class="contact">Contact</span></a></li>
           </ul>
         </div>
@@ -86,25 +86,25 @@
 
         <div class="row row-portfolio">
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="lightbox wrapper-portfolio" href="assets/images/fru-mobile-form-lg.png">
+              <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/">
                 <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
-                <h3 class="category">FreeRateUpdate.com</h3>
+                <h3 class="category">Mobile Optimization</h3>
               </a>
-              <p align="center">Mobile Optimization</p>
+              <p align="center"><a href="https://www.freerateupdate.com/landing_mobile/" target="_blank">FreeRateUpdate.com</a></p>
           </div>
           <div class="col-sm-4 margin-bottom-xs">
               <a class="lightbox wrapper-portfolio" href="assets/images/volum-io-lg.png">
                 <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
-                <h3 class="category">volum.io</h3>
+                <h3 class="category">Web Application</h3>
               </a>
-              <p align="center">Web Application</p>
+              <p align="center"><a href="http://volum.io" target="_blank">volum.io</a></p>
           </div>
           <div class="col-sm-4">
               <a class="lightbox wrapper-portfolio" href="assets/images/top-rt-streamer-lg.png">
                 <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="portfolio-3">
-                <h3 class="category">Top ReTweets</h3>
+                <h3 class="category">API Development</h3>
               </a>
-              <p align="center">API Development</p>
+              <p align="center"><a href="http://rt.greenhamsolutions.com:3000" target="_blank">Top ReTweet Board</a></p>
           </div>
         </div>
 
@@ -145,6 +145,12 @@
             <h4>MEAN Stack</h4>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+            <h4>SEO & Analytics</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                 <span class="sr-only"></span>
               </div>
             </div>
@@ -249,32 +255,30 @@
 
     <!-- CONTACT-->
     <!--===============================================================-->
-    <!-- <div class="bg-contact" id="contact">
+    <div class="bg-contact" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
             <h3>Feel free to contact me for your next project</h3>
-              YOUR E-MAIL
-            <a href="mailto:example@example.com" class="mail"><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a>
+            <a href="mailto:chris@greenhamsolutions.com" class="mail"><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- FOOTER-->
     <!--===============================================================-->
-    <!-- <div class="bg-footer">
+    <div class="bg-footer">
       <div class="container">
         <div class="row text-center">
           <div class="col-sm-12">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-tumblr"></i></a>
+            <a href="http://lnkd.in/svu8Eg" target="_blank"><i class="fa fa-linkedin fa-border"></i></a>
+            <a href="https://github.com/greenham" target="_blank"><i class="fa fa-github fa-border"></i></a>
+            <a href="mailto:chris@greenhamsolutions.com"><i class="fa fa-envelope fa-border"></i></a>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- FOOTER-BOTTOM-->
     <!--===============================================================-->
@@ -285,12 +289,12 @@
             <p class="copyright">2014 &copy; Green Ham Solutions LLC - All Rights Reserved</p>
           </div>
           <div class="col-sm-6">
-            <!-- <ul class="list-inline pull-right">
+            <ul class="list-inline pull-right">
               <li class="border-right"><a href="#home" data-scroll>Top</a></li>
               <li class="border-right"><a href="#portfolio" data-scroll>Portfolio</a></li>
               <li class="border-right"><a href="#skills" data-scroll>Skills</a></li>
-              <li><a href="#services" data-scroll>Services</a></li>
-            </ul> -->
+              <!-- <li><a href="#services" data-scroll>Services</a></li> -->
+            </ul>
           </div>
         </div>
       </div>
