link to portfolio items

--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
 
         <div class="row row-portfolio">
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/">
+              <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/" target="_blank">
                 <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
                 <h3 class="category">Mobile Optimization</h3>
               </a>
               <p align="center"><a href="https://www.freerateupdate.com/landing_mobile/" target="_blank">FreeRateUpdate.com</a></p>
           </div>
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="lightbox wrapper-portfolio" href="assets/images/volum-io-lg.png">
+              <a class="wrapper-portfolio" href="http://volum.io" target="_blank">
                 <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
                 <h3 class="category">Web Application</h3>
               </a>
               <p align="center"><a href="http://volum.io" target="_blank">volum.io</a></p>
           </div>
           <div class="col-sm-4">
-              <a class="lightbox wrapper-portfolio" href="assets/images/top-rt-streamer-lg.png">
+              <a class="wrapper-portfolio" href="http://rt.greenhamsolutions.com:3000" target="_blank">
                 <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="portfolio-3">
                 <h3 class="category">API Development</h3>
               </a>
