started fleshing out services

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a data-scroll href="#portfolio">Portfolio</a></li>
             <li><a data-scroll href="#skills">Skills</a></li>
-            <!-- <li><a data-scroll href="#services">Services</a></li> -->
+            <li><a data-scroll href="#services">Services</a></li>
             <li><a data-scroll href="#contact"><span class="contact">Contact</span></a></li>
           </ul>
         </div>
@@ -162,7 +162,7 @@
 
     <!-- SERVICES-->
     <!--===============================================================-->
-    <!-- <div class="bg-services" id="services">
+    <div class="bg-services" id="services">
       <div class="container">
 
         <div class="row">
@@ -180,7 +180,8 @@
               </div>
               <div class="col-xs-10">
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
                 </p>
               </div>
             </div>
@@ -188,10 +189,10 @@
           <div class="col-sm-6">
             <div class="row">
               <div class="col-xs-2">
-                <i class="fa fa-pencil-square-o fa-4x"></i>
+                <i class="fa fa-bolt fa-4x"></i>
               </div>
               <div class="col-xs-10">
-                <h3>Graphic Design</h3>
+                <h3>Search Engine Optimization</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
                 </p>
               </div>
@@ -205,45 +206,19 @@
                 <i class="fa fa-desktop fa-4x"></i>
               </div>
               <div class="col-xs-10">
-                <h3>Brand Identity</h3>
+                <h3>Branding & Design</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="row">
-              <div class="col-xs-2">
-                <i class="fa fa-bolt fa-4x"></i>
-              </div>
-              <div class="col-xs-10">
-                <h3>Fast Delivery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6 margin-bottom-xs">
             <div class="row">
               <div class="col-xs-2">
                 <i class="fa fa-comments fa-4x"></i>
               </div>
               <div class="col-xs-10">
-                <h3>7/24 Support</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="row">
-              <div class="col-xs-2">
-                <i class="fa fa-mobile"></i>
-              </div>
-              <div class="col-xs-10">
-                <h3>Responsive Design</h3>
+                <h3>Business Consulting</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
                 </p>
               </div>
@@ -251,7 +226,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- CONTACT-->
     <!--===============================================================-->
@@ -293,7 +268,8 @@
               <li class="border-right"><a href="#home" data-scroll>Top</a></li>
               <li class="border-right"><a href="#portfolio" data-scroll>Portfolio</a></li>
               <li class="border-right"><a href="#skills" data-scroll>Skills</a></li>
-              <!-- <li><a href="#services" data-scroll>Services</a></li> -->
+              <li class="border-right"><a href="#services" data-scroll>Services</a></li>
+              <li><a href="#contact" data-scroll>Contact</a></li>
             </ul>
           </div>
         </div>
