portfolio item descriptions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Professional web development services and consulting.">
     <meta name="author" content="Green Ham Solutions LLC">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <title>Web Development and Consulting | Green Ham Solutions</title>
@@ -86,25 +86,34 @@
 
         <div class="row row-portfolio">
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/" target="_blank">
-                <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
-                <h3 class="category">Mobile Optimization</h3>
-              </a>
-              <p align="center"><a href="https://www.freerateupdate.com/landing_mobile/" target="_blank">FreeRateUpdate.com</a></p>
+            <h4 align="center">Mobile Optimization</h4>
+            <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/" target="_blank">
+              <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
+              <h3 class="category">FreeRateUpdate.com</h3>
+            </a>
+            <p align="center">
+              <small>Optimized existing landing page for mobile display to increase conversion rate. Built with jQuery Mobile.</small>
+            </p>
           </div>
           <div class="col-sm-4 margin-bottom-xs">
-              <a class="wrapper-portfolio" href="http://volum.io" target="_blank">
-                <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
-                <h3 class="category">Web Application</h3>
-              </a>
-              <p align="center"><a href="http://volum.io" target="_blank">volum.io</a></p>
+            <h4 align="center">Web Application</h4>
+            <a class="wrapper-portfolio" href="http://volum.io" target="_blank">
+              <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
+              <h3 class="category">volum.io</h3>
+            </a>
+            <p align="center">
+              <small>Free web application used to convert volume to weight for various ingredients, improving accuracy and efficiency in the kitchen.</small>
+            </p>
           </div>
           <div class="col-sm-4">
-              <a class="wrapper-portfolio" href="http://rt.greenhamsolutions.com:3000" target="_blank">
-                <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="portfolio-3">
-                <h3 class="category">API Development</h3>
-              </a>
-              <p align="center"><a href="http://rt.greenhamsolutions.com:3000" target="_blank">Top ReTweet Board</a></p>
+            <h4 align="center">API Development</h4>
+            <a class="wrapper-portfolio" href="http://rt.greenhamsolutions.com:3000" target="_blank">
+              <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="portfolio-3">
+              <h3 class="category">Top ReTweet Board</h3>
+            </a>
+            <p align="center">
+              <small>A realtime top retweets streamer using node.js, socket.io, and Twitter's Streaming API with support for searching.</small>
+            </p>
           </div>
         </div>
 
