mobile form w/phone image

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">Mobile Optimization</h4>
             <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/" target="_blank">
-              <img class="img-responsive" src="assets/images/fru-mobile-form-sm.png" alt="portfolio-1">
+              <img class="img-responsive" src="assets/images/fru-mobile-form-phone.png" alt="portfolio-1">
               <h3 class="category">FreeRateUpdate.com</h3>
             </a>
             <p align="center">
-              <small>Optimized existing landing page for mobile display to increase conversion rate. Built with jQuery Mobile.</small>
+              <br><small>Optimized landing page for mobile display to increase conversion rate. Built with jQuery Mobile.</small>
             </p>
           </div>
           <div class="col-sm-4 margin-bottom-xs">
@@ -102,7 +102,7 @@
               <h3 class="category">volum.io</h3>
             </a>
             <p align="center">
-              <small>Free web application used to convert volume to weight for various ingredients, improving accuracy and efficiency in the kitchen.</small>
+              <br><small>Free web application used to convert volume to weight for various ingredients, improving accuracy and efficiency in the kitchen.</small>
             </p>
           </div>
           <div class="col-sm-4">
@@ -112,7 +112,7 @@
               <h3 class="category">Top ReTweet Board</h3>
             </a>
             <p align="center">
-              <small>A realtime top retweets streamer using node.js, socket.io, and Twitter's Streaming API with support for searching.</small>
+              <br><small>A realtime top retweets streamer using node.js, socket.io, and Twitter's Streaming API with support for searching.</small>
             </p>
           </div>
         </div>
