--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Professional web development services and consulting.">
-    <meta name="author" content="Green Ham Solutions LLC">
+    <meta name="author" content="Green Ham Solutions">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <title>Web Development and Consulting | Green Ham Solutions</title>
     <!-- CSS -->
@@ -58,11 +58,11 @@
           <div class="row">
             <div class="col-sm-12">
               <h1 class="text-center">
-                HEY !<br>I'm Chris Ham.<br>A web developer.<br>
+                Hello!<br>My name is Chris.<br><span style="font-size: 75%">I'm a full-stack web developer with over 15 years of experience.</span><br>
                 <div class="logos">
                   <a href="http://lnkd.in/svu8Eg" target="_blank"><i class="fa fa-linkedin fa-border fa-2x"></i></a>
                   <a href="https://github.com/greenham" target="_blank"><i class="fa fa-github fa-border fa-2x"></i></a>
-                  <a href="mailto:chris@greenhamsolutions.com"><i class="fa fa-envelope fa-border fa-2x"></i></a>
+                  <a href="mailto:chris@ghsdev.me"><i class="fa fa-envelope fa-border fa-2x"></i></a>
                 </div>
               </h1>
             </div>
@@ -84,11 +84,11 @@
           </div>
         </div>
 
-        <div class="row row-portfolio">
+        <div class="row">
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">Mobile Optimization</h4>
             <a class="wrapper-portfolio" href="https://www.freerateupdate.com/landing_mobile/" target="_blank">
-              <img class="img-responsive" src="assets/images/fru-mobile-form-phone.png" alt="portfolio-1">
+              <img class="img-responsive" src="assets/images/fru-mobile-form-phone.png" alt="fru-mobile">
               <h3 class="category">FreeRateUpdate.com</h3>
             </a>
             <p align="center">
@@ -97,24 +97,39 @@
           </div>
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">Web Application</h4>
-            <a class="wrapper-portfolio" href="http://volum.io" target="_blank">
-              <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="portfolio-2">
+            <a class="wrapper-portfolio" href="http://v2w.ghsdev.me" target="_blank">
+              <img class="img-responsive" src="assets/images/volum-io-sm.png" alt="volume2weight">
               <h3 class="category">volum.io</h3>
             </a>
             <p align="center">
               <br><small>Free web application used to convert volume to weight for various ingredients, improving accuracy and efficiency in the kitchen.</small>
             </p>
           </div>
-          <div class="col-sm-4">
-            <h4 align="center">API Development</h4>
-            <a class="wrapper-portfolio" href="http://rt.greenhamsolutions.com:3000" target="_blank">
-              <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="portfolio-3">
+          <div class="col-sm-4 margin-bottom-xs">
+            <h4 align="center">API Integration</h4>
+            <a class="wrapper-portfolio" href="http://ghsdev.me:3000" target="_blank">
+              <img class="img-responsive" src="assets/images/top-rt-streamer-sm.png" alt="toprtboard">
               <h3 class="category">Top ReTweet Board</h3>
             </a>
             <p align="center">
               <br><small>A realtime top retweets streamer using node.js, socket.io, and Twitter's Streaming API with support for searching.</small>
             </p>
           </div>
+        </div>
+
+        <div class="row row-portfolio">
+          <div class="col-sm-4 margin-bottom-xs">&nbsp;</div>
+          <div class="col-sm-4 margin-bottom-xs">
+            <h4 align="center">Automation</h4>
+            <a class="wrapper-portfolio" href="http://forevergrind.fm" target="_blank">
+              <img class="img-responsive" src="assets/images/fgfm.png" alt="fgfm">
+              <h3 class="category">ForeverGrind.fm</h3>
+            </a>
+            <p align="center">
+              <br><small>An automated, continuous stream of video content and music, running via OBS Studio (Open Broadcaster Software) and controlled by a custom bot in Node.js. Supports on-demand video requests, queuing, and automated start/stop controls. Also provides admin control via Twitch chat.</small>
+            </p>
+          </div>
+          <div class="col-sm-4 margin-bottom-xs">&nbsp;</div>
         </div>
 
       </div>
@@ -129,10 +144,16 @@
           <div class="col-sm-6 margin-bottom-xs">
             <h2>MY SKILLS</h2>
             <p>
-              I am a reliable and resourceful full-stack web developer with over 10 years of experience designing and programming elegant software solutions for unique industries across the web. Running a successful web development and consulting business for over a decade has taught me the value of smart, organized work, given me invaluable insight into the industry, and instilled a great sense of pride in what I do. I'm never satisfied with mediocrity and I continually fight complacency through self-education and seeking new opportunities.
+              I am a reliable and resourceful full-stack web developer with over 15 years of experience designing and programming elegant software solutions for unique industries across the web. Running a successful web development and consulting business for over a decade has taught me the value of smart, organized work, given me invaluable insight into the industry, and instilled a great sense of pride in what I do. I'm never satisfied with mediocrity and I continually fight complacency through self-education and seeking new opportunities.
             </p>
           </div>
           <div class="col-sm-6">
+            <h4>Modern Stack (Node.js + Mongo + React)</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
             <h4>LAMP Stack</h4>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
@@ -141,19 +162,13 @@
             </div>
             <h4>JavaScript</h4>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
                 <span class="sr-only"></span>
               </div>
             </div>
             <h4>HTML5/CSS3/jQuery</h4>
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                <span class="sr-only"></span>
-              </div>
-            </div>
-            <h4>MEAN Stack</h4>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
                 <span class="sr-only"></span>
               </div>
             </div>
@@ -188,9 +203,8 @@
                 <i class="fa fa-code fa-4x"></i>
               </div>
               <div class="col-xs-10">
-                <h3>Web Development</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
+                <h3>Custom Web Development</h3>
+                <p>I consider myself to be in the business of <strong>"web solutions"</strong>, and my definition of that goes beyond simple web design and development. It is my goal to provide you with a full-service, web-based solution for virtually any business, hobby, or idea <strong>all the way from consultation to implementation</strong>.
                 </p>
               </div>
             </div>
@@ -201,26 +215,14 @@
                 <i class="fa fa-bolt fa-4x"></i>
               </div>
               <div class="col-xs-10">
-                <h3>Search Engine Optimization</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
+                <h3>Analytics</h3>
+                <p><strong>Optimizing</strong> your existing business <strong>through the web</strong> using social networking, search engine optimization, and traffic analytics.
                 </p>
               </div>
             </div>
           </div>
         </div>
         <div class="row margin-bottom">
-          <div class="col-sm-6 margin-bottom-xs">
-            <div class="row">
-              <div class="col-xs-2">
-                <i class="fa fa-desktop fa-4x"></i>
-              </div>
-              <div class="col-xs-10">
-                <h3>Branding & Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
-                </p>
-              </div>
-            </div>
-          </div>
           <div class="col-sm-6">
             <div class="row">
               <div class="col-xs-2">
@@ -228,7 +230,19 @@
               </div>
               <div class="col-xs-10">
                 <h3>Business Consulting</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt.
+                <p>Consultations for <strong>new or existing websites</strong> regarding architecture, implementation, search engine optimization or <strong>additional functionality</strong>.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 margin-bottom-xs">
+            <div class="row">
+              <div class="col-xs-2">
+                <i class="fa fa-desktop fa-4x"></i>
+              </div>
+              <div class="col-xs-10">
+                <h3>Branding & Design</h3>
+                <p>I work with a roster of several talented artists to convert your vision into real pixels. Using the most modern techniques, we can easily develop your application to be optimized for both the web <strong>and mobile devices</strong> and build an application your visitors will <strong>remember</strong>.
                 </p>
               </div>
             </div>
@@ -244,7 +258,7 @@
         <div class="row">
           <div class="col-sm-12 text-center">
             <h3>Feel free to contact me for your next project</h3>
-            <a href="mailto:chris@greenhamsolutions.com" class="mail"><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a>
+            <a href="mailto:chris@ghsdev.me" class="mail"><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a>
           </div>
         </div>
       </div>
@@ -258,7 +272,7 @@
           <div class="col-sm-12">
             <a href="http://lnkd.in/svu8Eg" target="_blank"><i class="fa fa-linkedin fa-border"></i></a>
             <a href="https://github.com/greenham" target="_blank"><i class="fa fa-github fa-border"></i></a>
-            <a href="mailto:chris@greenhamsolutions.com"><i class="fa fa-envelope fa-border"></i></a>
+            <a href="mailto:chris@ghsdev.me"><i class="fa fa-envelope fa-border"></i></a>
           </div>
         </div>
       </div>
@@ -270,7 +284,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p class="copyright">2014 &copy; Green Ham Solutions LLC - All Rights Reserved</p>
+            <p class="copyright">2018 &copy; Green Ham Solutions - All Rights Reserved</p>
           </div>
           <div class="col-sm-6">
             <ul class="list-inline pull-right">
@@ -299,7 +313,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
+    
       ga('create', 'UA-3755181-4', 'auto');
       ga('send', 'pageview');
     </script>
