update fgfm, move to top

--- a/index.html
+++ b/index.html
@@ -115,23 +115,26 @@
 
         <div class="row">
           <div class="col-sm-4 margin-bottom-xs">
-            <h4 align="center">Mobile Optimization</h4>
+            <h4 align="center">Twitch Stream Automation</h4>
             <a
               class="wrapper-portfolio"
-              href="https://www.freerateupdate.com/landing_mobile/"
+              href="https://forevergrind.fm"
               target="_blank"
             >
               <img
                 class="img-responsive"
-                src="assets/images/fru-mobile-form-phone.png"
-                alt="fru-mobile"
+                src="assets/images/fgfm.png"
+                alt="fgfm"
               />
-              <h3 class="category">FreeRateUpdate.com</h3>
+              <h3 class="category">ForeverGrind.fm</h3>
             </a>
             <p align="center">
               <br /><small
-                >Optimized landing page for mobile display to increase
-                conversion rate. Built with jQuery Mobile.</small
+                >An automated, continuous stream of video content and music,
+                running via OBS Studio (Open Broadcaster Software) and
+                controlled by a custom bot in Node.js. Supports on-demand video
+                requests, queuing, and automated start/stop controls. Also
+                provides admin control via Twitch chat and web.</small
               >
             </p>
           </div>
@@ -182,26 +185,23 @@
 
         <div class="row row-portfolio">
           <div class="col-sm-4 margin-bottom-xs">
-            <h4 align="center">Twitch Stream Automation</h4>
+            <h4 align="center">Mobile Optimization</h4>
             <a
               class="wrapper-portfolio"
-              href="http://forevergrind.fm"
+              href="https://www.freerateupdate.com/landing_mobile/"
               target="_blank"
             >
               <img
                 class="img-responsive"
-                src="assets/images/fgfm.png"
-                alt="fgfm"
+                src="assets/images/fru-mobile-form-phone.png"
+                alt="fru-mobile"
               />
-              <h3 class="category">ForeverGrind.fm</h3>
+              <h3 class="category">FreeRateUpdate.com</h3>
             </a>
             <p align="center">
               <br /><small
-                >An automated, continuous stream of video content and music,
-                running via OBS Studio (Open Broadcaster Software) and
-                controlled by a custom bot in Node.js. Supports on-demand video
-                requests, queuing, and automated start/stop controls. Also
-                provides admin control via Twitch chat.</small
+                >Optimized landing page for mobile display to increase
+                conversion rate. Built with jQuery Mobile.</small
               >
             </p>
           </div>
