remove some links temporarily

--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
             <h4 align="center">Web Application</h4>
             <a
               class="wrapper-portfolio"
-              href="http://v2w.ghsdev.me"
-              target="_blank"
+              href="#"
             >
               <img
                 class="img-responsive"
@@ -164,8 +163,7 @@
             <h4 align="center">API Integration</h4>
             <a
               class="wrapper-portfolio"
-              href="http://ghsdev.me:3000"
-              target="_blank"
+              href="#"
             >
               <img
                 class="img-responsive"
