nonlinks to portfolio, not top of page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h4 align="center">Web Application</h4>
             <a
               class="wrapper-portfolio"
-              href="#"
+              href="#portfolio"
             >
               <img
                 class="img-responsive"
@@ -163,7 +163,7 @@
             <h4 align="center">API Integration</h4>
             <a
               class="wrapper-portfolio"
-              href="#"
+              href="#portfolio"
             >
               <img
                 class="img-responsive"
