nonlinks to portfolio, not top of page

--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@
           </div>
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">Web Application</h4>
-            <a
-              class="wrapper-portfolio"
-              href="#portfolio"
-            >
+            <a class="wrapper-portfolio" href="#portfolio">
               <img
                 class="img-responsive"
                 src="assets/images/volum-io-sm.png"
@@ -161,10 +158,7 @@
           </div>
           <div class="col-sm-4 margin-bottom-xs">
             <h4 align="center">API Integration</h4>
-            <a
-              class="wrapper-portfolio"
-              href="#portfolio"
-            >
+            <a class="wrapper-portfolio" href="#portfolio">
               <img
                 class="img-responsive"
                 src="assets/images/top-rt-streamer.png"
